--- a/frontend.conf
+++ b/frontend.conf
@@ -27,6 +27,10 @@ server {
         # Successfully authenticated users are proxied to the backend,
         # with 'sub' claim passed as HTTP header
         proxy_set_header username $jwt_claim_sub;
+        
+        # proxy_set_header Authorization "Bearer ${session_access_jwt}";  # Authorization Header for Access Token Lab
+        # proxy_set_header IDToken "$session_jwt";                        # Transfering sample of ID Token Info for Access Token Lab
+
         proxy_pass http://my_backend; # The backend site/app
         
         access_log /var/log/nginx/access.log main_jwt;
